--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,16 @@ android {
 }
 
 dependencies {
+// This is here to get rid of a double library error
     implementation("org.jetbrains.kotlin:kotlin-stdlib:1.8.10") {
         exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk8"
     }
-// API
+// Retrofit and json-to-string library for Kotlin
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+// Combining Retrofit and Moshi library for Kotlin
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
 
 // Fragments
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
@@ -51,8 +55,10 @@ dependencies {
 // RecyclerViews
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
-// ViewModels
+// to create a Livecycle aware components
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
 
 // Google Maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
