--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
 
+// DTO object validation
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
+
 // Fragments
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
 
